--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  height: 2000px;
 }
 
 h1,
@@ -17,4 +18,11 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
