--- a/css/introducao.css
+++ b/css/introducao.css
@@ -50,9 +50,48 @@
   background: linear-gradient(#ffb60d, #e59317);
 }
 
+@media (max-width: 600px) {
+  .introducao a {
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
+}
+
 
 .introducao img {
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
+}
+
+@media (max-width: 1200px) {
+  .introducao-titulo {
+    font-size: 3rem;
+  }
+
+  .introducao-texto {
+    font-size: 1.125rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .introducao-bg {
+    background: #111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px;
+  }
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  .introducao-conteudo {
+    padding: 0;
+  }
+
+  .introducao img {
+    height: 300px;
+    width: 100%;
+  }
+  
 }
