--- a/css/utilitarios/colors.css
+++ b/css/utilitarios/colors.css
@@ -13,10 +13,10 @@
   --cor-12: #000000;
   --cor-11: #111111;
   --cor-p1: #ffbb00;
-  --cor-p1: #e4a30b;
-  --cor-p1: #a66f00;
-  --cor-p1: #664400;
-  --cor-p1: #332200;
+  --cor-p2: #e4a30b;
+  --cor-p3: #a66f00;
+  --cor-p4: #664400;
+  --cor-p5: #332200;
 }
 
 .cor-0 {
@@ -42,4 +42,8 @@
 
 .cor-p1 {
   color: var(--cor-p1);
+}
+
+.cor-8 {
+  color: var(--cor-8);
 }
