--- a/css/utilitarios/tipografia.css
+++ b/css/utilitarios/tipografia.css
@@ -46,10 +46,6 @@
   font: 600 2rem/1.25 "Poppins", sans-serif;
 }
 
-.font-1-xl {
-  font: 500 2rem/1.25 "Roboto", sans-serif;
-}
-
 .font-1-xxl {
   font-size: 4rem;
   line-height: 1.11;
@@ -65,3 +61,24 @@
   font-weight: 400;
 }
 
+@media (max-width: 1200px) {
+  .font-1-xxl {
+    font-size: 3rem;
+  }
+
+  .font-2-l,
+  .font-2-l-b {
+    font-size: 1.125rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .font-1-xxl {
+    font-size: 2rem;
+  }
+
+  .font-1-xl,
+  .font-2-xl {
+    font-size: 1.5rem;
+  }
+}
