media query parceiros

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 /* Home */
 @import "./introducao.css";
 @import "./tecnologia.css";
+@import "./parceiros.css";
 
 /*bicicletas*/
 @import "./bicicleta-lista.css";
