--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import "./introducao.css";
 @import "./tecnologia.css";
 @import "./parceiros.css";
+@import "./seguros.css";
 
 /*bicicletas*/
 @import "./bicicleta-lista.css";
