--- a/css/seguros.css
+++ b/css/seguros.css
@@ -25,6 +25,10 @@
   border-radius: 5px;
 }
 
+.seguro-item- h3 {
+  margin-bottom: 35px;
+}
+
 .seguro-item- ul {
   display: flex;
   flex-direction: column;
