Adicionado media query no footer

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 @import "./tecnologia.css";
 @import "./parceiros.css";
 @import "./seguros.css";
+@import "./footer.css";
 
 /*bicicletas*/
 @import "./bicicleta-lista.css";
