--- a/css/depoimento.css
+++ b/css/depoimento.css
@@ -28,7 +28,7 @@
   font-size: 2rem;
   font-weight: 900;
   position: relative;
-  font-family: Merriweather;
+  font-family: "Merriweather";
   font-style: italic;
 }
 
