--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "./header.css";
 @import "./utilitarios/utilitario.css";
 @import "./global.css";
-@import "/css/depoimento.css";
+@import "./depoimento.css";
 
 /* Utilidades */
 @import "./utilitarios/tipografia.css";
