--- a/css/footer.css
+++ b/css/footer.css
@@ -61,3 +61,18 @@
     grid-column: 1;
   }
 }
+
+@media (max-width: 600px) {
+  .rodape {
+    grid-template-columns: 1fr;
+  }
+
+  .informacoes {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .contato ul:nth-child(3) {
+    margin-bottom: 35px;
+  }
+}
