adicionado os termos da página

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "./utilitarios/utilitario.css";
 @import "./global.css";
 @import "./depoimento.css";
+@import "./termos.css";
 
 /* Utilidades */
 @import "./utilitarios/tipografia.css";
