--- a/css/bicicletas.css
+++ b/css/bicicletas.css
@@ -1,62 +1,80 @@
-.bicicletas-bg {
-  padding: 60px 20px;
-}
-
 .bicicletas {
+  padding: 60px 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding: 60px 20px;
-  gap: 30px;
+  gap: 35px;
 }
 
-.bicicletas img {
+.bicicletas-bg:nth-child(3) {
+  background: linear-gradient(to right,#fff 30%, #111 0%);
+}
+
+.bicicletas-img {
+  display: grid;
+}
+
+.bicicletas-img img {
   height: auto;
-  display: block;
   border-radius: 4px;
+  display: block;
+  grid-area: 1/1;
+}
+
+.bicicletas-img span {
+  grid-area: 1/1;
+  place-self:start end;
+  margin: 20px 0 0 ;
+  background: var(--cor-12);
+  padding: 8px 16px 8px 8px;
+  border-radius: 4px 0 0 4px;
 }
 
 .bicicletas-conteudo {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-content: flex-start;
+  align-content: start;
+}
+
+.bicicletas-conteudo h2,
+.bicicletas-conteudo p {
+  grid-column: 1/-1;
 }
 
 .bicicletas-conteudo h2 {
-  margin-bottom: 20px;
+  margin: 0 0 20px;
+}
+
+.bicicletas-conteudo h2::before {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 8px;
+  background: var(--cor-p1);
+  margin-bottom: 10px;
 }
 
 .bicicletas-conteudo p {
-  grid-column: 1 / -1;
-  margin: 0 0 32px;
-}
-
-.bicicletas-conteudo .btg {
-  justify-self: end;
-  align-self: end;
+  margin-bottom: 32px;
+  max-width: 60ch;
 }
 
 .bicicletas-esp {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 16px;
 }
 
-.bicicletas-esp div{
+.bicicletas-esp li {
   display: flex;
-  font-size: 1.125rem;
   align-items: center;
-  gap: 5px;
 }
 
-.bicicletas-esp div span {
-  color: var(--cor-8);
-  font-family: "Poppins", sans-serif;
-}
-
-.bicicletas-esp div img {
+.bicicletas-esp li img {
+  width: 24px;
   height: 24px;
+  margin: 0px 8px 0px 0px;
 }
 
-.bicicletas:nth-child(2) {
-  background: linear-gradient(to right, #fff 30%, #111 0%);
-  color: var(--cor-5);
+.bicicletas-conteudo .btg {
+  place-self: end;
 }
