--- a/css/utilitarios/utilitario.css
+++ b/css/utilitarios/utilitario.css
@@ -42,3 +42,22 @@
     font-size: 1rem;
   }
 }
+
+.btg.seta {
+  display: flex;
+  align-items: center;
+}
+
+.btg.seta::after {
+  content: "";
+  display: inline-block;
+  height: 10px;
+  width: 18px;
+  margin-left: 12px;
+  background: url(../../img/icones/seta.svg);
+  transition: transform 0.2s;
+}
+
+.btg.seta:hover::after {
+  transform: translateX(4px);
+}
