--- a/css/bicicletas.css
+++ b/css/bicicletas.css
@@ -109,3 +109,99 @@
     font-size: 0.9rem;
   }
 }
+
+/*nimbus*/
+
+.nimbus-bg {
+  background-color: var(--cor-11);
+}
+
+.nimbus-img {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.nimbus-img img:nth-child(1) {
+  border-radius: 4px;
+  height: auto;
+  cursor: pointer;
+}
+
+.nimbus-img img:nth-child(2),
+.nimbus-img img:nth-child(3) {
+  flex: 1;
+  min-width: 200px;
+  border-radius: 4px;
+  height: auto;
+  cursor: pointer;
+  align-self: flex-start;
+}
+
+.nimbus {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  padding: 0px 20px 120px;
+}
+
+.nimbus-conteudo p {
+  margin-bottom: 2rem;
+}
+
+.nimbus-compra {
+  display: grid;
+  grid-template-columns: max-content auto;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+
+.nimbus-compra div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
+
+.nimbus-compra div span {
+  display: flex;
+  background-color: var(--cor-12);
+  max-width: max-content;
+  padding: 4px 8px;
+  gap: 8px;
+  border-radius: 4px;
+}
+
+.nimbus-conteudo h2 {
+  margin-bottom: 16px;
+}
+
+.bicicleta-inf {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+  background-color: var(--cor-12);
+  padding: 32px;
+  margin-bottom: 32px;
+  border-radius: 4px;
+}
+
+.bicicleta-inf h3 {
+  margin-bottom: 8px;
+}
+
+.nimbus-ficha {
+  background-color: var(--cor-12);
+  padding: 32px;
+  color: var(--cor-4);
+  display: grid;
+  border-radius: 4px;
+}
+
+.nimbus-ficha li {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+  border-bottom: 1px solid var(--cor-11);
+  font-family: "Roboto", sans-serif;
+}
