fit: html da pagia de contatos

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "./depoimento.css";
 @import "./termos.css";
 @import "./perguntas.css";
+@import "./contato.css";
 
 /* Utilidades */
 @import "./utilitarios/tipografia.css";
