--- a/css/contato.css
+++ b/css/contato.css
@@ -2,11 +2,18 @@
   display: grid;
   grid-template-columns: 5fr 7fr;
   padding: 0 20px;
+  margin-bottom: 300px;
+}
+
+#contatos {
+  background: linear-gradient(var(--cor-11) 461px 30%, var(--cor-1)0%);
 }
 
 .contato-dados {
   background-color: var(--cor-12);
   padding: 60px;
+  box-shadow: 0 1px 2px rbga(0,0,0,0.1);
+  border-radius: 4px 0 0 4px;
 }
 
 .contato-dados h2 {
@@ -17,6 +24,25 @@
 .contato-email,
 .contato-tel a {
   margin-bottom: 32px;
+  position: relative;
+}
+
+.contato-email::before {
+  content: "";
+  height: 23px;
+  width: 18px;
+  position: absolute;
+  background: url(../img/icones/email.svg) no-repeat center;
+  left: -30px;
+}
+
+.contato-endereco::before {
+  content: "";
+  height: 23px;
+  width: 18px;
+  position: absolute;
+  background: url(../img/icones/local.svg) no-repeat center;
+  left: -30px;
 }
 
 .contato-endereco li {
@@ -30,73 +56,71 @@
   padding: 0 0 0 16px;
 }
 
+@media (max-width: 800px) {
+  .contatos {
+    grid-template-columns: 1fr;
+  }
+
+  .contato-dados {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 0px;
+  }
+
+}
+
 /*formulário*/
 
-.contatos form {
+.contato-form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   padding: 60px;
-  gap: 0px 16px;
+  gap: 20px;
+  background: var(--cor-0);
 }
 
-input[type="text"],
-input[type="email"],
-label,
-textarea {
-  grid-column: 1;
+form label {
+  display: block;
+  font: 600 1rem/1.5 "Poppins", sans-serif;
+  margin-bottom: 4px;
 }
 
-#telefone {
-  grid-column: 2;
+.col-2 {
+  grid-column: 1 / -1;
 }
 
-label.ctelefone {
-  grid-row: 1;
-  align-self: flex-end;
-  grid-column: 2;
-}
-
-input[type="email"],
-.cemail {
-  grid-column: 1/-1;
-}
-
-label.cemail,
-label.cname,
-label.cmsg {
-  align-self: flex-end;
-}
-
-label.cmsg,
-textarea {
-  grid-column: 1/-1;
-}
-
-.contatos form button {
-  grid-column: 1;
-  align-self: end;
-}
-
-label {
-  font-size: 1rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-}
-
-form input,
-textarea {
-  background-color: var(--cor-1);
-  border: 1.5px solid var(--cor-3);
-  font-family: "Roboto", sans-serif;
+form input[type="text"],
+form input[type="email"],
+form textarea {
+  font: 400 1rem/1.5 "Roboto", sans-serif;
+  background: var(--cor-1);
+  border: 1px solid var(--cor-2);
+  padding: 12px;
   border-radius: 4px;
-  font-weight: 400;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-textarea {
-  min-width: 400px;
+form input[type="text"]:focus,
+form input[type="email"]:focus,
+form textarea:focus {
+  outline: none;
+  border-color: var(--cor-p1);
+  background: var(--cor-0);
+  box-shadow: 0 0 0 2px #fea;
 }
 
-form input,
-textarea:active {
-  border-color: var(cor-p1);
+button {
+  border: none;
+  cursor: pointer;
+  justify-self: flex-start;
+}
+
+@media (max-width: 600px) {
+  .contato-form {
+    grid-template-columns: 1fr;
+  }
+  form .col-2 {
+    grid-column: 1;
+  }
 }
