fit: adicionado a parte de lojas da pagina contatos

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "./termos.css";
 @import "./perguntas.css";
 @import "./contato.css";
+@import "./lojas.css";
 
 /* Utilidades */
 @import "./utilitarios/tipografia.css";
