--- a/css/contato.css
+++ b/css/contato.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 5fr 7fr;
   padding: 0 20px;
-  margin-bottom: 300px;
+  margin-bottom: 0;
 }
 
 #contatos {
