--- a/css/lojas.css
+++ b/css/lojas.css
@@ -1,3 +1,56 @@
+.lojas-bg {
+  background: var(--cor-1);
+}
+
 .lojas {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   padding: 120px 20px;
+  gap: 0 40px;
+}
+
+.lojas-item {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.lojas h2 {
+  margin: 0 0 60px;
+}
+
+.lojas-img img {
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+.lojas-conteudo {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.lojas-localizacao{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.lojas-localizacao ul {
+  border-left: 2px solid var(--cor-2);
+  padding: 0 0 0 12px;
+}
+
+.lojas-conteudo p {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  gap: 5px;
+}
+
+.lojas-conteudo p::before {
+  content: "";
+  display: inline-block;
+  background: url(../img/icones/horario.svg) no-repeat center;
+  width: 20px;
+  height: 120px;
 }
