fit: adicionado a parte de orçamento dados a pagina de orçamentos

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import "./perguntas.css";
 @import "./contato.css";
 @import "./lojas.css";
+@import "./orcamento.css";
 
 /* Utilidades */
 @import "./utilitarios/tipografia.css";
