--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -17,8 +17,85 @@ label {
   border-radius: 4px 0 0 4px;
   box-shadow: 0 1px 2px rgba(0,0,0, 0.2);
   padding: 60px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr)
+  ;
+  align-content: flex-start;
 }
 
+.orcamento-produto label:hover {
+  background-color: var(--cor-9);
+}
+
+.orcamento-produto label:focus {
+  background-color: var(--cor-9);
+  box-shadow: 0 0 0 2px var(--cor-p1);
+}
+
+.orcamento-produto input:focus + label {
+  box-shadow: 0 0 0 2px var(--cor-p1);
+}
+
+.orcamento-produto > * {
+  grid-column: 1 / -1;
+}
+
+.orcamento-produto label {
+  font: 400 1rem/1.5 "Poppins", sans-serif;
+  color: var(--cor-4);
+  background-color: var(--cor-10);
+  grid-column: 1;
+  display: grid;
+  padding: 12px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  text-transform: capitalize;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+}
+
+.orcamento-produto label::before {
+  content: "";
+  display: inline-block;
+  box-sizing: border-box;
+  width: 12px;
+  height: 12px;
+  border: 1px solid var(--cor-6);
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.orcamento-produto input:checked + label::before {
+  border-color: var(--cor-7);
+  box-shadow: inset 0 0 0 3px var(--cor-3);
+
+}
+
+.orcamento-produto input:checked + label span {
+  display: inline-block;
+}
+
+.orcamento-produto input {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.orcamento-produto input:checked + label {
+  background: var(--cor-0);
+  color: var(--cor-11);
+}
+
+.orcamento-conteudo {
+  padding: 20px;
+  margin: 20px;
+  display: none;
+}
+
+#bikcraft:checked ~ #orcamento-bikcraft,
+#seguro:checked ~ #orcamento-seguro {
+  display: block;
+}
 
 
 
@@ -30,6 +107,10 @@ label {
   gap: 20px 30px;
   border-radius: 0 4px 4px 0;
   box-shadow: 0 1px 2px rgba(0,0,0, 0.2);
+}
+
+.orcamento-dados button {
+  font-size: 1.1rem;
 }
 
 .orcamento h2 {
@@ -47,4 +128,55 @@ label {
   width: 4px;
   height: 10px;
   left: -8px;
+}
+
+.orcamento-detalhes {
+  background: var(--cor-0);
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 4px;
+  align-items: center;
+}
+
+.orcamento-detalhes li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.orcamento-detalhes li img {
+  width: 16px;
+  margin-right: 8px;
+}
+
+.orcamento-produto input:checked + label + .orcamento-detalhes {
+  display: grid;
+}
+
+@media (max-width: 1200px) {
+  .orcamento-produto,
+  .orcamento-dados {
+    padding: 32px;
+  }
+}
+
+@media (max-width: 800px) {
+  .orcamento {
+    grid-template-columns: 1fr;
+  }
+
+  .orcamento-dados {
+    border-radius: 5px 5px 0 0;
+  }
+
+  .orcamento-dados {
+    border-radius: 0 0 5px 5px;
+  }
+}
+
+@media (max-width: 400px) {
+  .orcamento-produto {
+    grid-template-columns: 1fr;
+  }
 }
